# limitbar

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish-apt.yml  release.yml
.wrangler/cache/: wrangler-account.json
assets/: limitbar.desktop
docs/: index.html
scripts/: publish-apt.sh
src/: config.rs  main.rs  model.rs  overlay.rs  render.rs  snapshot.rs  windows.rs
src/providers/: claude_code.rs  codex.rs  mod.rs
