[package]
name = "limitbar"
version = "0.1.0"
edition = "2024"
description = "Always-visible usage meter for LLM rate-limit windows"
license = "MIT"
repository = "https://github.com/i-rocky/limitbar"
authors = ["Rocky <smrockypk@gmail.com>"]
homepage = "https://i-rocky.github.io/limitbar/"

[package.metadata.deb]
section = "utils"
priority = "optional"
extended-description = """\
limitbar keeps LLM rate-limit windows visible: Claude Code and Codex
session/weekly usage in the terminal or a floating click-through overlay.
It reads data the user's own tools already wrote locally and never
prompts for authentication."""

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

eframe = { version = "0.33", optional = true, default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11",
] }

[features]
default = []
overlay = ["dep:eframe"]

[profile.release]
strip = true
lto = true
